k8s/manifests-e42ac1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-e42ac1
  namespace: journee
  labels:
    app: journee-e42ac1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-e42ac1
  template:
    metadata:
      labels:
        app: journee-e42ac1
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-e42ac1
          image: gcr.io/my-docker-471807/journee:v5.5.0
          ports:
            - containerPort: 3000
