k8s/manifests-e42ac1/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-e42ac1
  namespace: journee
spec:
  selector:
    app: journee-e42ac1
  ports:
    - port: 80
      targetPort: 3000
